<resources>
    <string name="app_name">美修智能充值</string>
    <string name="main_tab_home">功能</string>
    <string name="main_tab_history">历史记录</string>
    <string name="main_tab_instruction">使用帮助</string>
    <string name="main_tab_settings">设置</string>
    <string name="settings_user_info">用户信息</string>
    <string name="settings_language">多语言</string>
    <string name="language_auto">跟随系统</string>
    <string name="language_zh_hans">简体中文</string>
    <string name="settings_parameter">参数设置</string>
    <string name="settings_log_out">退出登录</string>
    <string name="settings_check_update">检查更新</string>
    <string name="settings_feedback">问题反馈</string>
    <string name="settings_hardware_version">固件版本</string>
    <string name="product_id"> %s</string>
    <string name="login_enter_telephone">请输入手机号</string>
    <string name="login_enter_verify">请输入验证码</string>
    <string name="login_send_verify">发送验证码</string>
    <string name="login_enter_password">请输入密码</string>
    <string name="login_enter_invite_code">请输入邀请码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_way_password">密码登录</string>
    <string name="login_way_verifyCode">验证码登录</string>
    <string name="login">登录</string>
    <string name="pass">已批准</string>
    <string name="refuse">已拒绝</string>
    <string name="pending">待批准</string>
    <string name="register">注册</string>
    <string name="to_register">还没有账号,去注册?</string>
    <string name="to_login">已有账号,去登录?</string>
    <string name="login_privacy">点击注册即代表您已经同意《隐私政策》</string>
    <string name="device_info">设备信息</string>
    <string name="seconds">%s s</string>
    <string name="remainTimes">%s 次</string>
    <string name="device_info_device_id">设备id:%s</string>
    <string name="device_info_product_id">产品id:%s</string>
    <string name="device_info_product_name">当前产品:%s</string>
    <string name="device_info_brand">品牌商:%s</string>
    <string name="device_info_agent">代理商:%s</string>
    <string name="device_info_store">店铺:%s</string>
    <string name="device_invite_name_hint">请输入%s名称</string>
    <string name="device_update_product_name">所属产品:%s</string>
    <string name="device_update_product_role">%s id</string>
    <string name="device_update_product_role_hint">请输入%s id</string>
    <string name="device_user_recharge_user">当前用户:%s</string>
    <string name="user_modify_username">当前名称:%s</string>
    <string name="user_remark_modify_username">当前名称:%s</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>