<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bkg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="214dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ask_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/device_info"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="214dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/device_id"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center"
                android:hint="@string/device_info_device_id"
                android:textColorHint="@color/text_gray" />

            <TextView
                android:id="@+id/product_id"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center"
                android:hint="@string/device_info_product_id"
                android:textColorHint="@color/text_gray" />

            <TextView
                android:id="@+id/brand"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center"
                android:hint="@string/device_info_brand"
                android:textColorHint="@color/text_gray" />

            <TextView
                android:id="@+id/agent"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center"
                android:hint="@string/device_info_agent"
                android:textColorHint="@color/text_gray" />

            <TextView
                android:id="@+id/store"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center"
                android:hint="@string/device_info_store"
                android:textColorHint="@color/text_gray" />


        </LinearLayout>
    </LinearLayout>
</layout>