<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="userVM"
            type="com.mxsella.smartrecharge.viewmodel.UserViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bkg"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginTop="144dp"
            android:src="@mipmap/mxsella_logo" />

        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="50dp"
            android:layout_marginTop="112dp"
            android:background="@drawable/input_bkg">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:background="@mipmap/telephone_logo" />

            <EditText
                android:id="@+id/edt_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="14dp"
                android:background="@null"
                android:hint="@string/login_enter_telephone"
                android:inputType="number"
                android:maxLength="11"
                android:text="11111111111"
                android:textColor="@color/black"
                android:textColorHint="#ABABAB"
                android:textSize="14sp" />
        </LinearLayout>


        <FrameLayout
            android:id="@+id/flt_verify_code"
            android:layout_width="335dp"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/input_bkg">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:background="@mipmap/verify_code_logo" />

            <EditText
                android:id="@+id/edt_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="34dp"
                android:background="@null"
                android:hint="@string/login_enter_verify"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textColorHint="#ABABAB"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_get_verify_code"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bkg_login_verify"
                android:gravity="center"
                android:onClick="getVerifyCode"
                android:text="@string/login_send_verify"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/lyt_password"
            android:layout_width="335dp"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/input_bkg"
            android:visibility="gone">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:background="@mipmap/password_logo" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="14dp"
                android:background="@null"
                android:hint="@string/login_enter_password"
                android:inputType="textPassword"
                android:maxLength="42"
                android:text="test1234"
                android:textColor="@color/black"
                android:textColorHint="#ABABAB"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_invite"
            android:layout_width="335dp"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/input_bkg"
            android:visibility="gone">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:background="@mipmap/password_logo" />

            <EditText
                android:id="@+id/edt_invite_code"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="14dp"
                android:background="@null"
                android:hint="@string/login_enter_invite_code"
                android:inputType="text"
                android:maxLength="12"
                android:textColor="@color/black"
                android:textColorHint="#ABABAB"
                android:textSize="14sp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:onClick="toRegister"
                android:text="@string/to_register"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_login_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:onClick="usePassword"
                android:text="@string/login_way_password"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </FrameLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="335dp"
            android:layout_height="50dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/login_btn"
            android:onClick="doLogin"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</layout>